* Added repository pattern * Fixes on class visibility

--- a/Payments.Presentacion/appsettings.json
+++ b/Payments.Presentacion/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PaymentsConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=payments;Integrated Security=True;Connect Timeout=30"
+  }
 }
