* Added exception handler middleware * Added endpoints

--- a/Payments.Presentacion/Payments.Presentacion.csproj
+++ b/Payments.Presentacion/Payments.Presentacion.csproj
@@ -19,10 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\Payments.Application\Payments.Application.csproj" />
     <ProjectReference Include="..\Payments.Infrastructure\Payments.Infrastructure.csproj" />
   </ItemGroup>
 
