--- a/Payments.Presentacion/appsettings.json
+++ b/Payments.Presentacion/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "PaymentsConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=payments;Integrated Security=True;Connect Timeout=30"
+  },
+  "External": {
+    "ApiUrl": "https://localhost:44347/External",
+    "JsonSerializerOptions": {
+      "PropertyNameCaseInsensitive": true
+    }
   }
 }
