Added files for dockerization

--- a/Payments.Presentacion/appsettings.json
+++ b/Payments.Presentacion/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PaymentsConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=payments;Integrated Security=True;Connect Timeout=30"
+    "PaymentsConnection": "Server=host.docker.internal,1433;Database=payments;Integrated security=False;User Id=sa;Password=123456;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "External": {
-    "ApiUrl": "https://localhost:44347/External",
+    "ApiUrl": "http://externalprocessor:8080/External",
     "JsonSerializerOptions": {
       "PropertyNameCaseInsensitive": true
     }
