--- a/ExternalProcessor/ExternalProcessor.csproj
+++ b/ExternalProcessor/ExternalProcessor.csproj
@@ -7,6 +7,7 @@
     <InvariantGlobalization>false</InvariantGlobalization>
     <UserSecretsId>f9e73c9e-aee1-4f15-9029-d2295ddc80e5</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
