--- a/Payments.Presentacion/Payments.Presentacion.csproj
+++ b/Payments.Presentacion/Payments.Presentacion.csproj
@@ -7,6 +7,7 @@
     <InvariantGlobalization>false</InvariantGlobalization>
     <UserSecretsId>fa52f2b6-4c5a-483a-83b7-617005e00b13</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
