--- a/Payments.Presentacion/appsettings.json
+++ b/Payments.Presentacion/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  // You should NEVER store connection string in this way
+  // neither use sa user
+  // nor use similarly unsafe passwords
   "ConnectionStrings": {
     "PaymentsConnection": "Server=host.docker.internal,1433;Database=payments;Integrated security=False;User Id=sa;Password=123456;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
